# Assigment/docs/swagger.json
@@ -1,22 +1,9 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample of Golang API endpoints assignment",
-        "title": "Golang API endpoints assignment",
-        "termsOfService": "http://swagger.io/terms/",
-        "contact": {
-            "name": "Hao Nguyen",
-            "url": "http://musicmaven.s3corp.vn",
-            "email": "hao.nguyen@s3corp.com.vn"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
-        "version": "1.0"
+        "contact": {},
+        "license": {}
     },
-    "host": "localhost:8080",
-    "basePath": "/",
     "paths": {
         "/addFriend": {
             "post": {
@@ -321,6 +308,92 @@
             }
         },
         "main.user": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "firstName": {
+                    "type": "string"
+                },
+                "lastName": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.FriendConnection": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "friends": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "models.FriendRequest": {
+            "type": "object",
+            "properties": {
+                "friends": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "models.RecipientRequest": {
+            "type": "object",
+            "properties": {
+                "sender": {
+                    "type": "string"
+                },
+                "text": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.RecipientResponse": {
+            "type": "object",
+            "properties": {
+                "recipients": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "models.Response": {
+            "type": "object",
+            "properties": {
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "models.SubscribeRequest": {
+            "type": "object",
+            "properties": {
+                "requestor": {
+                    "type": "string"
+                },
+                "target": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.User": {
             "type": "object",
             "properties": {
                 "email": {
