# Assigment/models/friend/friendconnection.go
@@ -1,0 +1,7 @@
+package models
+
+type FriendConnection struct {
+	Success bool     `json:"success"`
+	Friends []string `json:"friends"`
+	Count   int      `json:"count"`
+}
