# Assigment/models/friend/friendrequest.go
@@ -1,0 +1,5 @@
+package models
+
+type FriendRequest struct {
+	Friends []string `json:"friends"`
+}
