# Assigment/models/subscribe/recipientrequest.go
@@ -1,0 +1,6 @@
+package models
+
+type RecipientRequest struct {
+	Sender string `json:"sender"`
+	Text   string `json:"text"`
+}
