# Assigment/models/subscribe/recipientresponse.go
@@ -1,0 +1,6 @@
+package models
+
+type RecipientResponse struct {
+	Success    bool     `json:"success"`
+	Recipients []string `json:"recipients"`
+}
