# Assigment/models/subscribe/subscriberequest.go
@@ -1,0 +1,6 @@
+package models
+
+type SubscribeRequest struct {
+	Requestor string `json:"requestor"`
+	Target    string `json:"target"`
+}
